--- a/HW2.Rmd
+++ b/HW2.Rmd
@@ -7,10 +7,20 @@ output: html_notebook
 ```{r}
 library("lpSolveAPI")
 x <- read.lp("P3_4.lp")
+x
 ```
 
-Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Ctrl+Alt+I*.
+Now, solve for the problem
+```{r}
+solve(x)
+get.objective(x)
+```
+Get variables and constraints
+```{r}
+get.constraints(x)
+```
+get variables
+```{r}
+get.variables(x)
+```
 
-When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Ctrl+Shift+K* to preview the HTML file).
-
-The preview shows you a rendered HTML copy of the contents of the editor. Consequently, unlike *Knit*, *Preview* does not run any R code chunks. Instead, the output of the chunk when it was last run in the editor is displayed.
