added goal programming and branch and bound

--- a/Transportation_Assignment.Rmd
+++ b/Transportation_Assignment.Rmd
@@ -7,7 +7,7 @@ The first problem is the P&T Transportation problem
 
 ```{r}
 library(lpSolveAPI)
-x <- read.lp("PT_Transportation.lp")
+x <- read.lp("PT_DS1.lp")
 x
 solve(x)
 ```
