--- a/SA.Rmd
+++ b/SA.Rmd
@@ -90,13 +90,17 @@ points(out1$par[1],-out1$value, col = 2, pch = 19)
 #### Portfolio Optimization
 
 Reference: https://cran.r-project.org/web/packages/PortfolioAnalytics/vignettes/portfolio_vignette.pdf
+https://journal.r-project.org/archive/2013/RJ-2013-002/RJ-2013-002.pdf
+
 
 Mean-risk models were developed in the 1950s for portfolio selection problems. Value-at-Risk (VaR) and Conditional Value-at-Risk (CVaR) are the most popular measures of downside risk. Mullen et al. (2011) and Ardia et al. (2011) used DEoptim to find the portfolio weights for which the portfolio has the lowest CVaR and each investment can contribute at most 22.5% to total portfolio CVaR risk. For details, please refer to Mullen et al. (2011); Ardia et al. (2011). The code for objective function in portfolio optimization are from Ardia et al. (2011) (https://journal.r-project.org/archive/2011/RJ-2011-005/RJ-2011-005.pdf)  
+Definition of VAR/CVAR: http://www.pacca.info/public/files/docs/public/finance/Active%20Risk%20Management/gpfl.pdf
+
 
 ```{r}
 library("quantmod")
-tickers <- c("GE", "IBM", "JPM", "MSFT", "WMT")
-getSymbols(tickers, from = "2000-12-01", to = "2010-12-31")
+tickers <- c("GE", "IBM", "JPM", "GOOG", "MSF")
+getSymbols(tickers, from = "2008-12-01", to = "2018-11-01")
 P <- NULL
 for(ticker in tickers) {
  tmp <- Cl(to.monthly(eval(parse(text = ticker))))
@@ -108,16 +112,26 @@ R <- R[-1,]
 mu <- colMeans(R)
 sigma <- cov(R)
 library("PerformanceAnalytics")
+# We now use an equal weight portfolio
 pContribCVaR <- ES(weights = rep(0.2, 5), method = "gaussian", portfolio_method = "component", mu = mu, sigma = sigma)$pct_contrib_ES
+rbind(tickers, round(100 * pContribCVaR, 2)) # This outputs the percent contribution to portfolio risk
+round(100*mu,2) # Mean return
+round(100 * diag(sigma)^(1/2), 2) # Standard deviation 
 obj <- function(w) {
  fn.call <<- fn.call + 1
  if (sum(w) == 0) { w <- w + 1e-2 }
- w <- w / sum(w)
+  w <- w / sum(w)
  CVaR <- ES(weights = w, method = "gaussian", portfolio_method = "component", mu = mu, sigma = sigma)
  tmp1 <- CVaR$ES
- tmp2 <- max(CVaR$pct_contrib_ES - 0.225, 0)
- out <- tmp1 + 1e3 * tmp2
+ tmp2 <- max(CVaR$pct_contrib_ES - 0.225, 0) #each investment contributes at most 22.5% to the portfolio CVaR risk
+# print(round(100 * CVaR$pct_contrib_ES, 2))
+
+ out <- tmp1 + 1e3 * tmp2 # note that here the budget constraint acts like a penalty. So big M is 1000.
  return(out)
+}
+
+objmin <- function(w) {
+  -1 * obj(w)
 }
 ```
 ```{r}
@@ -125,11 +139,28 @@ set.seed(1234)
 fn.call <<- 0
 out.GenSA <- GenSA(fn = obj, lower = rep(0, 5), upper = rep(1, 5), control = list(smooth = FALSE, max.call = 3000))
 fn.call.GenSA <- fn.call
-out.GenSA$value
+out.GenSA$par # This gives the weights
+out.GenSA$value # objective function value 
 out.GenSA$counts
 cat("GenSA call functions", fn.call.GenSA, "times.\n")
 wstar.GenSA <- out.GenSA$par
-wstar.GenSA <- wstar.GenSA / sum(wstar.GenSA)
+wstar.GenSA <- wstar.GenSA / sum(wstar.GenSA) # standardize the weights
 rbind(tickers, round(100 * wstar.GenSA, 2))
-100 * (sum(wstar.GenSA * mu) - mean(mu))
+mu
+mean(mu) # This specifies the return for an equal weight portfolio
+100 * (sum(wstar.GenSA * mu) - mean(mu)) # A positive value here indicates that this portfolio will have higher expected return than an equal weight portfolio
 ```
+```{r}
+# rerun portfolio optimization with GA
+# Note the - sign in the fitness function
+# https://cran.r-project.org/web/packages/GA/vignettes/GA.html
+
+outGA <- ga(type = "real-valued",fitness= objmin ,lower=rep(0,5),upper=rep(1,5),popSize = 100)
+-1*outGA@fitnessValue
+wstar.GA <- outGA@solution # Weights
+wstar.GA <- wstar.GA / sum(wstar.GA)
+rbind(tickers,round(100*wstar.GA,2))
+100 * (sum(wstar.GA*mu)-mean(mu))
+
+```
+
